--- a/popup.css
+++ b/popup.css
@@ -38,8 +38,7 @@ body {
 
 input{
     /* background-color: #eff9e6; */
-    color: #012d68;
-    font-weight: 500;
+    font-weight: 400;
     letter-spacing: .5px;
 }
 
@@ -54,11 +53,11 @@ div {
 }
 
 .section {
-    background-color: #e8e8e8;
-    border-radius: 8px;
+    background-color: #c1c1c187;
+    border-radius: 12px;
     padding: 3px;
     max-height: fit-content;
-    margin:3px;
+    margin:6px 0px;
 }
 .inputBox {
     padding:8px;
@@ -87,14 +86,14 @@ div {
     outline: none;
     letter-spacing: 0.5px;
     /* border-color: black; */
-    font-weight: 900;
-    color: #012d68;
+    font-weight: 700;
+    color: #ff000091;
     border-width: 1px;
     width: 100%;
     margin-bottom: 1px;
 }
 h4{
-    font-weight: 447;
+    font-weight: 500;
     font-size: 13.5px;
     /* color: rgb(197, 4, 46); */
 }
@@ -103,12 +102,18 @@ h4{
 }
 
 #banner{
+    display: flex;
     margin: -5px -10px 10px;
-    font-size: 1.7em;
-    font-weight:600;
     color: white;
     background: #012d68;
+    align-items: center;
+    /* justify-content: center; */
+}
+#main-heading{
+    font-size: 1.3em;
+    font-weight:600;
     text-align: center;
-    /* border-radius: 15px 15px 0px 0px; */
-    padding: 7px;
+    padding: 6px;
+    margin: 0px;
+
 }
