--- a/popup.css
+++ b/popup.css
@@ -5,7 +5,7 @@ html {
 }
 .btn-primary {
     float: right;
-    background: #1a73e8;
+    background: #326ee4;
     color: white;
     border-radius: 5px;
     padding: 5px 10px;
@@ -33,7 +33,7 @@ body {
     align-items: center;
     vertical-align: middle;
     height: max-content;
-    background-color: #f5f4f0;
+    background-color: #e7e4ec;
 }
 
 input{
@@ -85,9 +85,9 @@ div {
     padding: 5px 10px 5px 15px;
     outline: none;
     letter-spacing: 0.5px;
-    /* border-color: black; */
     font-weight: 700;
     color: #ff000091;
+    background-color: #e7e4ec;
     border-width: 1px;
     width: 100%;
     margin-bottom: 1px;
