Css changes in submit button

--- a/popup.css
+++ b/popup.css
@@ -5,7 +5,7 @@ html {
 }
 .btn-primary {
     float: right;
-    background: #39C16C;
+    background: #48a853;
     color: white;
     border-radius: 5px;
     padding: 5px 10px;
